force-app/main/default/objects/abc_Customer__c/abc_Customer__c.object-meta.xml
<CustomObject>
    <description>Stores customer information for the PharmD application, linked to authenticated users via the REST API.</description>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>