force-app/main/default/objects/abc_Customer__c/fields/abc_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>abc_DateOfBirth__c</fullName>
    <description>Date of birth of the customer/user.</description>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>