force-app/main/default/objects/abc_Customer__c/fields/abc_Detailed_Address__c.field-meta.xml
<CustomField>
    <fullName>abc_Detailed_Address__c</fullName>
    <description>Detailed address of the customer as a long text area.</description>
    <label>Detailed Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>