force-app/main/default/objects/abc_Customer__c/fields/abc_Email__c.field-meta.xml
<CustomField>
    <fullName>abc_Email__c</fullName>
    <description>Unique identifier for the REST API to check if an account exists. Marked as External ID and Unique (Case-Insensitive) to enable single-DML upsert and prevent duplicate customer creation.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>