force-app/main/default/objects/abc_Customer__c/fields/abc_Governorate__c.field-meta.xml
<CustomField>
    <fullName>abc_Governorate__c</fullName>
    <description>Governorate picklist using the abc_Governorate_values global value set.</description>
    <label>Governorate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abc_Governorate_values</valueSetName>
    </valueSet>
</CustomField>