force-app/main/default/objects/abc_Customer__c/fields/abc_Phone__c.field-meta.xml
<CustomField>
    <fullName>abc_Phone__c</fullName>
    <description>Secondary contact method for the customer.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>